<resources>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Вход в личный кабинет</string>
    <string name="find_job">Поиск работы</string>
    <string name="hint_email">Электронная почта или телефон</string>
    <string name="hint_find_job">Должность, ключевые слова</string>
    <string name="hint_find_job_vacancies">Должность по подходящим вакан...</string>
    <string name="button_continue">Продолжить</string>
    <string name="login_password">Войти с паролем</string>
    <string name="find_worker">Поиск сотрудников</string>
    <string name="posting_vacancies">Размещение вакансий и доступ к базе резюме</string>
    <string name="i_find_worker">Я ищу сотрудников</string>
    <string name="response">Откликнуться</string>
    <string name="send_email">Отправили код на %s</string>
    <string name="information_for_send_email">Напишите его, чтобы подтвердить, что это вы, а не кто-то другой входит в личный кабинет</string>
    <string name="star">*</string>
    <!--    <string name="star">❆</string>-->
    <string name="confirm">Подтвердить</string>
    <string name="error_email">Вы ввели неверный e-mail</string>
    <string name="empty"></string>
    <string name="icon_filter">icon filter</string>
    <string name="vacancies_for_you">Вакансии для вас</string>
    <string name="button_count_vacancies">Еще %d вакансии</string>
    <string name="icon_offer">icon offer</string>
    <string name="card_offer_title">Вакансии рядом с вами</string>
    <string name="raise">Поднять</string>
    <string name="card_vacancies_viewing_vacancies">Сейчас просматривает 1 человек</string>
    <string name="icon_favorite_selected">icon favorite selected</string>
    <string name="icon_experiences">icon experiences</string>
    <string name="icon_confirm">icon confirm</string>
    <string name="experiences">Опыт от 1 года до 3 лет</string>
    <string name="publication_date">Опубликовано %s</string>
    <string name="count_vacancies">135 вакансий</string>
    <string name="compliance">По соответствию</string>
    <string name="icon_sort">icon sort</string>
    <string name="eye">eye</string>
    <string name="shared">shared</string>
    <string name="favorite">favorite</string>
    <string name="experience_job">Требуемый опыт:%s</string>
    <string name="title_applied">%d %s уже</string>
    <string name="icon_avatar_smail">icon avatar smail</string>
    <string name="content_applied">%s</string>
    <string name="title_looking">%d %s</string>
    <string name="content_looking">сейчас %s</string>
    <string name="image_map">image map</string>
    <string name="location_address">%s,%s,%s</string>
    <string name="description_company"><![CDATA[MOBYRIX- динамично развивающаяся продуктовая IT-компания, специализирующаяся на разработке мобильных приложений для iOS и Android. Наша команда работает над собственными продуктами в разнообразных сферах: от утилит до развлечений и бизнес-приложений.Мы ценим талант и стремление к инновациям и в данный момент в поиске талантливогоUX/UI Designer, готового присоединиться к нашей команде и внести значимый вклад в развитие наших проектов.]]></string>
    <string name="you_task">Ваши задачи</string>
    <string name="task">-Проектировать пользовательский опыт, проводить UX исследования;-Разрабатывать адаптивный дизайн интерфейса для мобильных приложений;-Разрабатывать быстрые прототипы для тестирования идеи дизайна и их последующая; интеграция на основе обратной связи от команды и пользователей;-Взаимодействовать с командой разработчиков для обеспечения точной реализации ваших дизайнов;-Анализ пользовательского опыта и адаптация под тренды.</string>
    <string name="questions_title">Задайте вопрос работодателю</string>
    <string name="questions_response">Он получит его с откликом на вакансию</string>
    <string name="icon_dialog">icon dialog</string>
    <string name="resume_title">Резюме для отклика</string>
    <string name="add_letter">Добавить сопроводительное</string>
    <string name="cover_letter">Ваше сопроводительное письмо</string>

    <plurals name="people_viewing">
        <item quantity="zero">Сечас просматривает %d человек</item>
        <item quantity="one">Сечас просматривает %d человек</item>
        <item quantity="few">Сечас просматривают %d человека</item>
        <item quantity="many">Сечас просматривают %d человек</item>
        <item quantity="other">%d</item>
    </plurals>

    <plurals name="people_looking">
        <item quantity="zero">%d человек сейчас смотрят</item>
        <item quantity="one">%d человек сейчас смотрит</item>
        <item quantity="few">%d человека сейчас смотрят</item>
        <item quantity="many">%d человек сейчас смотрят</item>
        <item quantity="other">%d</item>
    </plurals>

    <plurals name="people_response">
        <item quantity="zero">%d человек уже откликнулись</item>
        <item quantity="one">%d человек уже откликнулся</item>
        <item quantity="few">%d человека уже откликнулись</item>
        <item quantity="many">%d человек уже откликнулись</item>
        <item quantity="other">%d</item>
    </plurals>

    <plurals name="more_vacancies">
        <item quantity="zero">Еще %d вакансий</item>
        <item quantity="one">Еще %d вакансия</item>
        <item quantity="few">Еще %d вакансии</item>
        <item quantity="many">Еще %d вакансий</item>
        <item quantity="other">%d</item>
    </plurals>

    <plurals name="count_vacancies">
        <item quantity="zero">%d вакансий</item>
        <item quantity="one">%d вакансия</item>
        <item quantity="few">%d вакансии</item>
        <item quantity="many">%d вакансий</item>
        <item quantity="other">%d</item>
    </plurals>

</resources>