<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/card_offer_width"
    android:layout_height="@dimen/card_offer_height"
    android:background="@drawable/rounded_card"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_1x"
    android:paddingVertical="@dimen/_10dp">

    <ImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_offer"
        tools:src="@drawable/ic_offer_avatar" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        style="@style/sfProDisplayMedium.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2x"
        tools:text="@string/card_offer_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewButton"
        style="@style/sfProDisplayRegular.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/green"
        tools:text="@string/raise" />

</LinearLayout>