<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_response"
    android:orientation="vertical"
    android:padding="@dimen/dp_1x">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewTitleLooking"
            style="@style/sfProDisplayRegular.14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/title_looking" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/icon_avatar_smail"
            android:src="@drawable/ic_eye_smail" />

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewContentLooking"
        style="@style/sfProDisplayRegular.14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/content_looking" />

</LinearLayout>