<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_card"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_2x"
    android:paddingVertical="@dimen/dp_3x">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/sfProDisplayMedium.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_worker" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/sfProDisplayRegular.14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1x"
        android:text="@string/posting_vacancies" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonFindWorker"
        style="@style/sfProDisplayRegular.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2x"
        android:backgroundTint="@color/green"
        android:text="@string/i_find_worker"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/dp_4x" />
</LinearLayout>