<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_card"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/dp_1x"
    android:paddingVertical="@dimen/dp_3x">

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/sfProDisplayMedium.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_job" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutEmail"
        style="@style/TextInputLayoutCustom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2x"
        app:endIconDrawable="@drawable/ic_close"
        app:endIconMode="clear_text"
        app:startIconDrawable="@drawable/ic_response">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextEmail"
            style="@style/TextEditStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2x"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonContinue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/blue"
            android:text="@string/button_continue"
            android:textAllCaps="false"
            android:textAppearance="@style/sfProDisplayRegular.14sp"
            app:cornerRadius="@dimen/dp_1x" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:backgroundTint="@color/gray1"
            android:text="@string/login_password"
            android:textAppearance="@style/sfProDisplayRegular.14sp"
            android:textColor="@color/blue"
            app:cornerRadius="@dimen/dp_1x" />
    </LinearLayout>


</LinearLayout>