<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_card"
    android:orientation="vertical"
    android:padding="@dimen/_12dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewVacanciesCompany"
            style="@style/sfProDisplayMedium.16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="Мобирикс" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_1x"
            android:layout_gravity="bottom"
            android:contentDescription="@string/icon_confirm"
            android:src="@drawable/ic_confirm" />
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1x"
        android:contentDescription="@string/image_map"
        android:scaleType="fitXY"
        android:src="@drawable/map" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddressLocation"
        style="@style/sfProDisplayRegular.14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_1x"
        android:text="@string/location_address" />
</LinearLayout>