<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/responseFragmentId"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/main_bg"
    android:padding="@dimen/dp_2x"
    tools:context="com.github.gunin_igor75.presentation.screens.response.ResponseFragment">

    <View
        android:id="@+id/view1"
        android:layout_width="@dimen/view_dialog_width"
        android:layout_height="@dimen/view_dialog_height"
        android:background="@color/gray2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        android:contentDescription="@string/icon_dialog"
        android:src="@drawable/ic_dialog"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewResumeTitle"
        style="@style/sfProDisplayRegular.14sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2x"
        android:text="@string/resume_title"
        android:textColor="@color/gray3"
        app:layout_constraintStart_toEndOf="@id/imageView"
        app:layout_constraintTop_toTopOf="@id/imageView" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewVacancy"
        style="@style/sfProDisplayMedium.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_2x"
        app:layout_constraintBottom_toBottomOf="@id/imageView"
        app:layout_constraintStart_toEndOf="@id/imageView"
        tools:text="UI/UX дизайнер " />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1dp"
        android:layout_marginTop="@dimen/dp_3x"
        android:background="@color/gray2"
        app:layout_constraintTop_toBottomOf="@id/textViewVacancy" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewAddLetter"
        style="@style/sfProDisplayBold.16sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_40dp"
        android:text="@string/add_letter"
        android:textColor="@color/green"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        android:hint="@string/cover_letter"
        android:inputType="textMultiLine"
        android:maxLines="3"
        android:scrollbars="vertical"
        android:textColor="@color/white"
        android:textColorHint="@color/gray3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonRespond"
        style="@style/sfProDisplayRegular.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10x"
        android:backgroundTint="@color/green"
        android:text="@string/response"
        android:textAllCaps="false"
        app:cornerRadius="@dimen/_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/barrier" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="bottom"
        app:constraint_referenced_ids="editText" />

</androidx.constraintlayout.widget.ConstraintLayout>