<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="@dimen/card_offer_width"
    android:layout_height="@dimen/card_offer_height"
    android:background="@drawable/rounded_card"
    android:paddingHorizontal="@dimen/dp_1x"
    android:paddingVertical="@dimen/_10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imageViewIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/icon_offer"
        android:tint="@color/gray2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@drawable/ic_offer_avatar" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="@dimen/dp_5x" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guidelineVertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="0dp" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewTitle"
        style="@style/sfProDisplayMedium.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_hint"
        android:textColor="@color/gray2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintTop_toTopOf="@id/guidelineHorizontal"
        tools:text="@string/card_offer_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textViewButton"
        style="@style/sfProDisplayMedium.14sp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_hint"
        android:textColor="@color/gray2"
        app:layout_constraintStart_toStartOf="@id/guidelineVertical"
        app:layout_constraintTop_toBottomOf="@id/textViewTitle"
        tools:text="@string/raise" />


</androidx.constraintlayout.widget.ConstraintLayout>