<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/vacanciesFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg"
    android:orientation="vertical"
    android:padding="@dimen/dp_2x"
    tools:context=".screens.vacancies.VacanciesFragment">

    <include
        android:id="@+id/includeFindJobVacancies"
        layout="@layout/block_find_job_vacancies"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2x" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_2x"
        android:gravity="center"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewCountVacancies"
            style="@style/sfProDisplayRegular.14sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            tools:text="@string/count_vacancies" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:gravity="end"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/sfProDisplayRegular.14sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/compliance"
                android:textColor="@color/blue" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginStart="@dimen/_6dp"
                android:contentDescription="@string/icon_sort"
                android:src="@drawable/ic_sort" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_3x"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        tools:itemCount="1"
        tools:listitem="@layout/card_item_vacancies" />

</LinearLayout>